--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ body {
 }
 p {
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+.p1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 .main-text{
     width: 550px;
@@ -117,5 +123,32 @@ p {
 }
 .h2{
     font-size: 41px;
-    font-family: 'Times New Roman'
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+}
+.visual-info{
+    display: flex;
+    justify-content: center;
+}
+.visual-color{
+    display: flex;
+    justify-content: center;
+}
+.h1{
+    font-size: 35px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.visual-color-1{
+    display: flex;
+    align-self: center;
+    justify-content:center;
+}
+.visual-info-1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
+.p-1{
+    display:flex;
+    justify-self: start;
 }
