--- a/style.css
+++ b/style.css
@@ -99,15 +99,14 @@ p {
 }
 .main-info-2{
     height: 340px;
+    gap:135px
 }
 .main-info-2-1{
     display: flex;
     justify-content: center;
-    text-align: center;
     float: left;
     width: 400px;
-    height: 93px;
-    padding: 134.2px 135px 112.8px 0;
+    padding: 134.2px 0 112.8px 0;
     margin: 0 0 0  134.2px ;
 }
 .main-info-2-2{
@@ -124,7 +123,9 @@ p {
 .h2{
     font-size: 41px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
+    font-weight: 700;
+    line-height: 46.2px;
+    letter-spacing: 1.25px;
 }
 .visual-info{
     display: flex;
@@ -151,4 +152,52 @@ p {
 .p-1{
     display:flex;
     justify-self: start;
+}
+.p0{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 25.92px;
+}
+.limited-info{
+    height: 819.8px;
+    display: flex;
+    margin-top: 79.42px;
+    width: 1344px;
+}
+.lim{
+    width: 560px;
+    height: 176px;
+}
+.lim-1{
+    display: flex;
+    justify-content: center;
+}
+.lim-2{
+    display: flex;
+    justify-content: center;
+}
+.h3{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 33px;
+    line-height: 55.2px;
+    letter-spacing: 1.2px;
+}
+.p2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28.98px;
+}
+.lim-pict{
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+.lim-pict-1{
+    position: absolute;
+}
+.lim-pict-1-1{
+    position: relative;
 }
