--- a/style.css
+++ b/style.css
@@ -18,10 +18,35 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 1440px;
+    height: 82px;
 }
 .header-1-1{
-    width: 554px;
+    width: 560px;
     height: 21px;
+    margin-top: 9px;
+    text-align: center;
+}
+.header-2-p{
+    margin-left: 49px;
+    margin-top: 30px;
+    margin-bottom: 29px;
+    font-weight: bold;
+}
+.header-2-p-1{
+    margin-left: 35px;
+    margin-top: 30px;
+    margin-bottom: 29px;
+    font-weight: bold;
+}
+.header-2-3-p{
+    margin-top: 30px;
+    margin-left: 35px;
+    margin-bottom: 29px;
+    font-weight: bold;
+}
+.header-2-3-p-1{
+    font-weight: bold;
 }
 .header-2{
     display: flex;
@@ -41,8 +66,16 @@ body {
 }
 .main-info{
     background-image: url('assept/Fon1.svg');
-    height: 604.8px;
+    padding-top: 169px;
+    width: 1440px;
+    height: 435px;
+}
 
+.main-info-div{
+    width: 248px;
+    height: 265px;
+    margin-left: 383px;
+    margin-bottom: 170px;
 }
 .main-info-1{
     background-color: #F5F1E9;
@@ -65,6 +98,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 47px;
+    margin-top: 24px;
+    margin-left: 15px;
+    margin-bottom: 24px;
   }
 .O{
     color: aliceblue;
@@ -81,7 +118,6 @@ body {
 p {
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
 }
 .p1{
     font-family: Arial, Helvetica, sans-serif;
@@ -93,9 +129,16 @@ p {
     display: flex;
     align-items: center;
     text-align: center;
-    font-size: 18px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bolder
+    font-size: 20px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 650;
+}
+.main-info-h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 41px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .main-info-2{
     height: 340px;
@@ -105,27 +148,22 @@ p {
     display: flex;
     justify-content: center;
     float: left;
+    text-align: center;
+    margin-top: 110px;
+    margin-bottom: 113px;
     width: 400px;
-    padding: 134.2px 0 112.8px 0;
-    margin: 0 0 0  134.2px ;
+    margin-left: 135px;
 }
 .main-info-2-2{
     display: block;
     width: 640px;
     height: 104px;
     float: right;
-    padding: 121.1px 120px 114.8px 0;
+    margin: 121px 120px 115px 0;
 }
 .visual{
     background-color:#FBF6EA ;
     height: 939px;
-}
-.h2{
-    font-size: 41px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 700;
-    line-height: 46.2px;
-    letter-spacing: 1.25px;
 }
 .visual-info{
     display: flex;
@@ -134,20 +172,106 @@ p {
 .visual-color{
     display: flex;
     justify-content: center;
+    margin-bottom: 45px;
+}
+.visual-h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 35px;
+    font-weight: 400;
+    color: #35312E;
+}
+.visual-designed{
+    height: 552px;
+    width: 1440px;
+    display: flex;
+}
+.visual-design-1{
+    margin-right:360px ;
+    width: 561px;
+    height: 516px;
+    background-image: url("assept/skovorodka.svg");
+    padding-top: 36px;
+}
+.visual-design-info-4{
+    margin-left: 454px;
+    margin-top: 243px;
+    margin-bottom: 84px;
+}
+.visual-text{
+    width: 175px;
+    height: 47px;
+    text-align: center;
+}
+.visual-design-info-5{
+    margin-left: 374px;
+    margin-bottom: 34px;
+    font-size: 12px;
+}
+.visual-design-info-3{
+    margin-top: 83px;
+    margin-left: 340px;
+}
+.visual-des{
+    width: 180px;
+    height: 31px;
+    text-align: center;
+
+}
+.visual-design-info-1{
+    margin-right: 24px;
+    margin-top: 225px;
+}
+.visual-design-info-2{
+    margin-bottom: 70px;
+    margin-left: 420px;
+    margin-top: 140px;
+}
+.visual_cont{
+    width: 200px;
+    height: 31px;
+    text-align: center;
+    margin-left: 370px;
+}
+.visual-p{
+    width: 158px;
+    height: 31px;
+    font-size: 12px;
+    text-align: center;
+    margin-left: 378px;
+    margin-right: 26px;
+}
+
+.h2{
+    font-size: 41px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    line-height: 46.2px;
+    letter-spacing: 1.25px;
+}
+.margin{
+    margin-top: 0;
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 400;
+}
+.margin-1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.margin-2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    font-weight: 400;
+    text-decoration: underline;
+    margin-top: 0;
 }
 .h1{
     font-size: 35px;
+    margin-top: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-.visual-color-1{
-    display: flex;
-    align-self: center;
-    justify-content:center;
-}
-.visual-info-1{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
 }
 .p-1{
     display:flex;
@@ -190,14 +314,75 @@ p {
     font-size: 18px;
     line-height: 28.98px;
 }
-.lim-pict{
-    display: flex;
-    align-items: center;
-    gap: 60px;
-}
 .lim-pict-1{
     position: absolute;
 }
 .lim-pict-1-1{
     position: relative;
+    margin-bottom: 30px;
+}
+.lim-img{
+    margin-bottom: 20px;
+    height: 200px;
+}
+.p01{
+    color: #670A18;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+}
+.lim{
+    margin: 0 440px 100px 440px;
+    width: 560px;
+    height: 176px;
+}
+.lim-1{
+    display: flex;
+    justify-content: center;
+}
+.lim-h3{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 33px;
+    font-weight: 700;
+    text-align: center;
+    width: 477px;
+    height: 111px;
+}
+.lim-p2{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    font-size:18px ;
+    font-weight:400 ;
+    width: 477px;
+    height: 58px;
+    text-align: center;
+}
+.lim-cont{
+    width: 286px;
+    height: 229px;
+}
+.lim-pict{
+    display: flex;
+    gap: 60px;
+}
+.lim-pict-2{
+    position: absolute;
+}
+.lim-pict-2-2{
+    position: relative;
+}
+.lim-pict-3{
+    position: absolute;
+}
+.lim-pict-3-2{
+    position: relative;
+}
+.lim-pict-4{
+    position: absolute;
+}
+.lim-pict-4-2{
+    position: relative;
+}
+.img-1{
+    display: flex;
+    justify-content: ;
 }
