--- a/style.css
+++ b/style.css
@@ -32,21 +32,25 @@ body {
     margin-top: 30px;
     margin-bottom: 29px;
     font-weight: bold;
+    color: #35312E;
 }
 .header-2-p-1{
     margin-left: 35px;
     margin-top: 30px;
     margin-bottom: 29px;
     font-weight: bold;
+    color: #35312E;
 }
 .header-2-3-p{
     margin-top: 30px;
     margin-left: 35px;
     margin-bottom: 29px;
     font-weight: bold;
+    color: #35312E;
 }
 .header-2-3-p-1{
     font-weight: bold;
+    color: #35312E;
 }
 .header-2{
     display: flex;
@@ -70,7 +74,6 @@ body {
     width: 1440px;
     height: 435px;
 }
-
 .main-info-div{
     width: 248px;
     height: 265px;
@@ -327,8 +330,61 @@ p {
     margin-bottom: 30px;
 }
 .lim-img{
-    margin-bottom: 20px;
-    height: 200px;
+    width: 286px;
+    height: 229px;
+}
+.lim-img-1{
+    width: 286px;
+    height: 229px;
+}
+.lim-img-2{
+    width: 286px;
+    height: 229px;
+}
+.lim-img-3{
+    width: 286px;
+    height: 229px;
+}
+.lim-txt-1{
+    display: block;
+    text-align: center;
+}
+.lim-h2{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    font-weight: 450;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #35312E;
+    line-height: 23.8px;
+    margin: 0;
+    margin-top: 15px;
+}
+.lim-p-1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #6E635A  ;
+    line-height: 21px;
+    margin: 0;
+    margin-top: 6px;
+    margin-left: 64px;
+    width: 161px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+.lim-p-1-1{
+    width: 161px;
+    height: 59px;
+    margin-left: 62px;
+    color: #6E635A;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11px;
+    font-weight: 400;
+    margin-top: 6px;
+    text-align: center;
 }
 .p01{
     color: #670A18;
@@ -370,7 +426,8 @@ p {
     gap: 60px;
 }
 .lim-pict-2{
-    position: absolute;
+    width: 286px;
+    height: 229px;
 }
 .lim-pict-2-2{
     position: relative;
@@ -389,7 +446,6 @@ p {
 }
 .img-1{
     display: flex;
-    justify-content: ;
 }
 .dish{
     display: flex;
@@ -539,6 +595,30 @@ p {
     height:74px ;
     background-color: #807C62;
 }
+.inf-2{
+    display: flex;
+    gap: 797px;
+    padding-top: 20px;
+}
+.inf2{
+    display: flex;
+    gap: 30px;
+}
+.p-1{
+    margin-left: 48px;
+    color: #FCFAF680;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+}
+.p-2{
+    color: #FCFAF680;
+}
+.invalid{
+    border: none;
+    background-color: none;
+    border-radius: 8px;
+}
 .info-h2{
     color: #F5F1E9;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -551,6 +631,8 @@ p {
     font-size: 14px;
     font-weight: 400;
     margin-top: 11px;
+    width: 585px;
+    height: 24px;
 }
 .some-links{
     display: flex;
@@ -615,12 +697,39 @@ p {
 }
 .email-1{
     width: 347px;
-    height: 60px;
+    height: 58x;
     border: 0;
-    padding: 0;
+    padding-left: 10px;
 }
 .submit{
     width: 101px;
     border: 0;
     padding: 0;
+    background-color: #FCFAF6;
+}
+.knopka-1{
+    width: 248px;
+    height: 60px;
+    background-color: #D37657;
+    color: #FFFFFF;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    border: none;
+    cursor: grab;
+}
+.img-1{
+    margin-left: 93px;
+    margin-top: 21px;
+}
+.img-2{
+    margin-top: 21px;
+    margin-left: 53px;
+}
+.img-3{
+    margin-top: 21px;
+    margin-left: 93px;
+}
+.img-4{
+    margin-top: 21px;
 }
