--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ p:hover{
 }
 .h1{
     font-size: 35px;
-    margin-top: none;
+    margin-top: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .p-1{
@@ -529,22 +529,18 @@ p:hover{
 }
 .dem0{
     border: none;
-    background-color: none;
     cursor:pointer;
 }
 .dem1{
     border: none;
-    background-color: none;
     cursor:pointer;
 }
 .dem2{
     border: none;
-    background-color: none;
     cursor:pointer;
 }
 .dem3{
     border: none;
-    background-color: none;
     cursor:pointer;
     letter-spacing: 2px;
     color: #35312E;
@@ -623,7 +619,6 @@ p:hover{
 }
 .invalid{
     border: none;
-    background-color: none;
     border-radius: 8px;
 }
 .info-h2{
@@ -705,7 +700,7 @@ p:hover{
 }
 .email-1{
     width: 347px;
-    height: 58x;
+    height: 58px;
     border: 0;
     padding-left: 10px;
 }
